--- a/app/views/usuarios/new.html.erb
+++ b/app/views/usuarios/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New usuario</h1>
+<div data-role="header">
+  <h1>Crear usuario</h1>
+  <%= link_to 'Regresar', usuarios_path %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', usuarios_path %>
