Fotos con carrierwave

--- a/app/views/alumnos_personas_vinculadas/consultar.html.erb
+++ b/app/views/alumnos_personas_vinculadas/consultar.html.erb
@@ -40,7 +40,7 @@
        <% if tipo != "" %>
         <div data-role="content" style="color: #06c; text-align: center">
           <% persona = PersonaVinculada.find_by_tipo_documento_and_numero_documento(tipo,numero) %>
-          <%= image_tag(persona.foto) %> <br/>
+          <%= image_tag(persona.foto_url.to_s) %> <br/>
           <%= ListaValor.find_by_tabla_and_item(2, tipo).descripcion + " " + numero %>  <br/>
           <%= persona.apellidos_nombres %>
         </div>
