--- a/app/views/alumnos/show.html.erb
+++ b/app/views/alumnos/show.html.erb
@@ -1,6 +1,12 @@
 <div data-role="header">
   <h1>Personas vinculadas</h1>
-  <%= link_to 'Regresar', alumnos_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+  <% if !params[:id].nil? %>
+    <% alumno_id = params[:id] %>
+  <% else %>
+    <% alumno_id = params[:alumno_persona_vinculada][:alumno_id] %>
+  <% end %>
+  <% seccion = AnioAlumno.find_by_anio_escolar_id_and_alumno_id(1, alumno_id).seccion_id %>
+  <%= link_to 'Regresar', listar_seccion_alumnos_path(seccion), "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
 <div data-role="header" style="text-align: center" data-theme="c">
