--- a/app/views/cuaderno_controles_revisiones/verificar.html.erb
+++ b/app/views/cuaderno_controles_revisiones/verificar.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <div data-role="content">
-  <%= form_tag(consultar_cuaderno_control_path) do %>
+  <%= form_tag(consultar_cuaderno_control_path, {"onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar"}) do %>
     <div data-role="fieldcontain">
       Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %>
       Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
@@ -27,7 +27,7 @@
     </div>
     <% @cuaderno_controles_revisiones.each do |cuaderno_control_revision| %>
     <li data-filtertext="<%= "#{cuaderno_control_revision.alumno.apellidos_nombres}" %>" <% if cuaderno_control_revision.revisado == 1 %>data-icon="check"<% else %>data-icon="false"<% end %>  >
-      <%= link_to cuaderno_control_revision do %>
+      <%= link_to "#" do %>
         <%= simple_format("#{cuaderno_control_revision.alumno.apellidos_nombres} -- #{cuaderno_control_revision.observaciones}") %>        
       <% end %>      
     </li>
