--- a/app/views/personas_vinculadas/_form.html.erb
+++ b/app/views/personas_vinculadas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@persona_vinculada, :html => { :class => "ui-body ui-body-c", :multipart => true, "data-ajax" => "false" }) do |f| %>
+<%= form_for(@persona_vinculada, :html => { :class => "ui-body ui-body-c", :multipart => true, "data-ajax" => "false", "onSubmit" => "return validarFoto(document.personas, persona_vinculada[foto]);", "name" => "personas" }) do |f| %>
   <% if @persona_vinculada.errors.any? %>
     <div id="error_explanation" data-role="header" data-theme="e">
       <h2><%= pluralize(@persona_vinculada.errors.count, "error") %> impidieron que se grabe el registro:</h2>
