--- a/app/views/cuaderno_controles_revisiones/index.html.erb
+++ b/app/views/cuaderno_controles_revisiones/index.html.erb
@@ -1,34 +1,36 @@
 <div data-role="header">
-  <h1>Revisar cuaderno de control</h1>
+  <h1>Verificar cuaderno de control</h1>
 </div>
-<div data-role="content" class="ui-content" role="main">
-  <div data-role="collapsible-set" data-theme="b" data-content-theme="d" data-inset="false">
-    <div data-role="collapsible" data-collapsed="false">
-      <h2>Sin revisar</h2>
-      <ul data-role="listview" data-filter="true">
-        <% @cuaderno_controles_revisiones.no_revisado.each do |cuaderno_control_revision| %>
-        <li data-filtertext="<%= "#{cuaderno_control_revision.cuaderno_control.fecha.strftime('%d/%m/%Y')} #{cuaderno_control_revision.alumno.apellidos_nombres}" %>" >
-          <%= link_to cuaderno_control_revision do %>
-            <%= "#{cuaderno_control_revision.cuaderno_control.fecha.strftime('%d/%m/%Y')} - #{cuaderno_control_revision.alumno.apellidos_nombres}" %>        
-          <% end %>
 
-        </li>
-        <% end %>
-      </ul>
-    </div>
-    
-    <div data-role="collapsible">
-      <h2>Revisados</h2>
-      <ul data-role="listview" data-filter="true">
-        <% @cuaderno_controles_revisiones.revisado.each do |cuaderno_control_revision| %>
-        <li data-filtertext="<%= "#{cuaderno_control_revision.cuaderno_control.fecha.strftime('%d/%m/%Y')} #{cuaderno_control_revision.alumno.apellidos_nombres}" %>" >
-          <%= link_to cuaderno_control_revision do %>
-            <%= "#{cuaderno_control_revision.cuaderno_control.fecha.strftime('%d/%m/%Y')} - #{cuaderno_control_revision.alumno.apellidos_nombres}" %>        
-          <% end %>
+<% if params[:seccion_id].nil? %>
+  <% seccion = "" %>
+  <% fecha = "" %>
+  <% titulo = "" %>
+<% else %>
+  <% seccion = params[:seccion_id] %>
+  <% fecha = params[:fecha] %>
+  <% titulo = "| Fecha: " + fecha + " | Sección: " + seccion + " |" %>
+<% end %>
 
-        </li>
-        <% end %>
-      </ul>
+<div data-role="content">
+  <%= form_tag(cuaderno_controles_revisiones_path, {:method => :get, "onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar"}) do %>
+    <div data-role="fieldcontain">
+      Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %>
+      Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
     </div>
-  </div>
+  <% end %>
+  
+  <ul data-role="listview" data-filter="true">
+    <div data-role="content" style="color: #06c">
+      <%= simple_format(titulo) %>
+    </div>
+    <% @cuaderno_controles_revisiones.each do |cuaderno_control_revision| %>
+    <li data-filtertext="<%= "#{cuaderno_control_revision.alumno.apellidos_nombres}" %>" <% if cuaderno_control_revision.revisado == 1 %>data-icon="check"<% else %>data-icon="false"<% end %>  >
+      <%= link_to "#" do %>
+        <%= simple_format("#{cuaderno_control_revision.alumno.apellidos_nombres} -- #{cuaderno_control_revision.observaciones}") %>        
+      <% end %>      
+    </li>
+    <% end %>
+  </ul>
 </div>
