--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <image src="/assets/logo_small.gif" style="vertical-align:bottom" />            
       
       <% if current_user %>
-        <%= link_to "Menu", "/menu.html" %>
+        <%= link_to "Menu", "/menu" %>
         <%= current_user.usuario %>
         <%= link_to "Salir", log_out_path %>
       <% end %>            
