--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -7,7 +7,7 @@
     <ul data-role="listview">
         <li data-role="list-divider">Cuaderno de control</li>
         <li><a href="/cuadernos_controles">Registrar</a></li>
-        <li><a href=<%= "/cuaderno_controles_revisiones/#{current_user.usuario}/revision" %> >Revisar</a></li>
+        <li><a href=<%= "/revision_cuaderno_control/#{current_user.usuario}" %> >Revisar</a></li>
         <li><a href="/cuaderno_controles_revisiones/">Verificar</a></li>
         <li data-role="list-divider">Seguridad de alumnos</li>
         <li><a href="/personas_vinculadas">Personas vinculadas</a></li>
