Correcciones de rutas y validacion de formulario de salidas

--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -11,8 +11,8 @@
         <li><a href="/cuaderno_controles_revisiones/">Verificar</a></li>
         <li data-role="list-divider">Seguridad de alumnos</li>
         <li><a href="/personas_vinculadas">Personas vinculadas</a></li>
-        <li><a href="/alumnos/0/listar_seccion">Vincular personas</a></li>
-        <li><a href="/alumnos_personas_vinculadas/0/0/consultar">Salida de alumnos</a></li>
+        <li><a href="/alumnos_secciones">Vincular personas</a></li>
+        <li><a href="/salida">Salida de alumnos</a></li>
     </ul>
   </div><!--/content-primary -->	
 </div>
