--- a/app/views/alumnos/listar_seccion.html.erb
+++ b/app/views/alumnos/listar_seccion.html.erb
@@ -5,10 +5,10 @@
   <% seccion = params[:seccion_id] %>
 <% end %>
 <div data-role="content" class="content-primary">
-  <%= form_tag(buscar_alumnos_path) do %>
+  <%= form_tag(alumnos_secciones_path, {:method => :get, "data-ajax" => "false"}) do %>
     <div data-role="fieldcontain">
       Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
-      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true" %>
+      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
     </div>
   <% end %>
 
