--- a/app/views/alumnos_personas_vinculadas/consultar.html.erb
+++ b/app/views/alumnos_personas_vinculadas/consultar.html.erb
@@ -15,11 +15,11 @@
     <div class="ui-block-a" style="text-align: center;">
       <b>Persona que recoge:</b>
        <hr>
-       <%= form_tag(buscar_alumnos_personas_vinculadas_path, {"onSubmit" => "return validarBusquedaXDocumento();", "data-ajax" => "false", "name" => "buscar"}) do %>            
+       <%= form_tag(salida_path, {:method => :get, "onSubmit" => "return validarBusquedaXDocumento();", "data-ajax" => "false", "name" => "buscar"}) do %>            
          <div data-role="fieldcontain">
             <div style="text-align: left;">
               Tipo documento:<br/>
-              <%= collection_select(:persona_vinculada, :tipo_documento, ListaValor.where("tabla=2"), :item, :descripcion, {}, {"data-mini" => "true"}) %>
+              <%= collection_select(:persona_vinculada, :tipo_documento, ListaValor.where("tabla=2"), :item, :descripcion, {}, {"data-mini" => "true", :name => "tipo_documento"}) %>
             </div>
 <br/>
             <div style="text-align: left;">
@@ -28,7 +28,7 @@
             </div>
 <br/>
             <div>
-              <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true" %>
+              <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
             </div>
           </div>         
       <% end %>
@@ -52,7 +52,7 @@
     <div class="ui-block-c">     
       <% if !persona.nil? %>
       <div data-role="content" style="text-align: center"> 
-        <%= form_tag(crear_en_bloque_asistencias_path, {"onSubmit" => "return verificarCantidadCheckBoxes('alumno_id[]', 1, -1, 'alumno');", "data-ajax" => "false", "name" => "salida"}) do %>
+        <%= form_tag(salidas_path, {"onSubmit" => "return verificarCantidadCheckBoxes('alumno_id[]', 1, -1, 'alumno');", "data-ajax" => "false", "name" => "salida"}) do %>
           <div data-role="fieldcontain">
             <% @alumnos_personas_vinculadas.each do |alumno_persona_vinculada| %>
               <p>
