--- a/app/views/asistencias/consultar.html.erb
+++ b/app/views/asistencias/consultar.html.erb
@@ -2,7 +2,7 @@
   <h1>Consultar salida de alumnos con personas autorizada</h1>
 </div>
 
-<% if params[:seccion_id].nil? %>
+<% if params[:seccion_id] == "0" %>
   <% seccion = "" %>
   <% fecha = "" %>
   <% titulo = "" %>
@@ -13,11 +13,11 @@
 <% end %>
 
 <div data-role="content">
-  <%= form_tag(asistencias_path, {"onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
+  <%= form_tag(buscar_asistencia_path, {"onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar"}) do %>
     <div data-role="fieldcontain">
       Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %>
       Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
-      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
+      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true" %>
     </div>
   <% end %>
   
@@ -28,7 +28,7 @@
     <% @asistencias.each do |asistencia| %>
     <li data-filtertext="<%= "#{asistencia.anio_alumno.alumno.apellidos_nombres}" %>" >
       <%= link_to "#" do %>
-        <%= simple_format("#{asistencia.anio_alumno.alumno.apellidos_nombres}  #{asistencia.hora} #{asistencia.persona_vinculada.apellidos_nombres} " ) %>
+        <%= simple_format("#{asistencia.anio_alumno.alumno.apellidos_nombres}" ) %>
       <% end %>      
     </li>
     <% end %>
