--- a/app/views/perfiles/index.html.erb
+++ b/app/views/perfiles/index.html.erb
@@ -1,23 +1,17 @@
-<h1>Listing perfiles</h1>
+<div data-role="header">
+  <h1>Perfiles</h1>
+  <%= link_to 'Agregar', new_perfil_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+</div>
 
-<table>
-  <tr>
-    <th>Descripcion</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @perfiles.each do |perfil| %>
-  <tr>
-    <td><%= perfil.descripcion %></td>
-    <td><%= link_to 'Show', perfil %></td>
-    <td><%= link_to 'Edit', edit_perfil_path(perfil) %></td>
-    <td><%= link_to 'Destroy', perfil, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Perfil', new_perfil_path %>
+<div data-role="content">
+  <ul data-role="listview" data-filter="true">
+    <% @perfiles.each do |perfil| %>
+    <li data-filtertext="<%= "#{perfil.descripcion}" %>" >
+      <%= link_to edit_perfil_path(perfil) do %>
+        <%= simple_format("#{perfil.descripcion}") %>
+      <% end %>
+      <%= link_to 'Eliminar', perfil, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
+    </li>
+    <% end  %>
+  </ul>
+</div>
