--- a/app/views/perfiles/new.html.erb
+++ b/app/views/perfiles/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New perfil</h1>
+<div data-role="header">
+  <h1>Crear perfil</h1>
+  <%= link_to 'Regresar', perfiles_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', perfiles_path %>
