--- a/app/views/perfiles/show.html.erb
+++ b/app/views/perfiles/show.html.erb
@@ -1,10 +1,14 @@
-<p id="notice"><%= notice %></p>
+<div id='Perfil' data-role="header">
+  <h1>Detalles</h1>
+  <%= link_to 'Aceptar', perfiles_path, "data-icon" => "check", "data-mini" => "true"  %>
+</div>
 
-<p>
-  <b>Descripcion:</b>
-  <%= @perfil.descripcion %>
-</p>
+<div data-role="content" style="clear: left">
+    <b>Descripcion:</b> <%= @perfil.descripcion %><p>
+</div>
 
 
-<%= link_to 'Edit', edit_perfil_path(@perfil) %> |
-<%= link_to 'Back', perfiles_path %>
+<div data-role="footer">
+<!--   <%= link_to 'Editar', edit_perfil_path(@perfil), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>  -->
+</div>
+
