--- a/app/views/usuarios/edit.html.erb
+++ b/app/views/usuarios/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing usuario</h1>
+<div data-role="header">
+    <h1>Editar usuario</h1>
+    <%= link_to 'Regresar', usuarios_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @usuario %> |
-<%= link_to 'Back', usuarios_path %>
