--- a/app/views/usuarios/new.html.erb
+++ b/app/views/usuarios/new.html.erb
@@ -1,6 +1,6 @@
 <div data-role="header">
   <h1>Crear usuario</h1>
-  <%= link_to 'Regresar', usuarios_path %>
+  <%= link_to 'Regresar', usuarios_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
 <%= render 'form' %>
