Modificacion envio de correo

--- a/app/views/evento_mailer/notificacion_evento.html.erb
+++ b/app/views/evento_mailer/notificacion_evento.html.erb
@@ -1,4 +1,4 @@
-<p>Estimado padre de familia:</p>
+<p>Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:</p>
 <p>Se le informa que se ha registrado un evento relacionado con su hijo(a):</p>
 
 <p>
