--- a/app/views/evento_mailer/notificacion_evento.text.erb
+++ b/app/views/evento_mailer/notificacion_evento.text.erb
@@ -1,4 +1,4 @@
-Estimado padre de familia:
+Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:
 
 Se le informa que se ha registrado un evento relacionado con su hijo(a):
 
