--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -13,6 +13,8 @@
         <li><a href="/personas_vinculadas">Personas vinculadas</a></li>
         <li><a href="/alumnos_secciones">Vincular personas</a></li>
         <li><a href="/salida">Salida de alumnos</a></li>
+        <li data-role="list-divider">Actividades del colegio</li>
+        <li><a href="/calendario_actividades/<%= Date.current.strftime("%Y/%m/%d") %>">Calendario</a></li>
     </ul>
   </div><!--/content-primary -->	
 </div>
