--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,70 +1,24 @@
-<p id="notice"><%= notice %></p>
+<div id='Actividad' data-role="header">
+  <h1>Detalles</h1>
+  <%= link_to 'Aceptar', actividades_path, "data-icon" => "check", "data-mini" => "true"  %>
+</div>
 
-<p>
-  <b>Anio escolar:</b>
-  <%= @actividad.anio_escolar_id %>
-</p>
+<div data-role="content" style="clear: left">
+    <b>Tipo Evento:</b> <%= "#{TipoEvento.find(@actividad.tipo_evento_id).descripcion}" %><p>
+    <b>Tipo Actividad:</b> <%= "#{ListaValor.find_by_tabla_and_item(6, @actividad.tipo_actividad).descripcion}" %><p>
+    <b>Nombre:</b> <%= @actividad.nombre %><p>
+    <b>Detalle:</b> <%= @actividad.detalle %><p>
+    <b>Fecha de inicio:</b> <%= @actividad.fecha_hora_inicio.strftime('%d/%m/%Y %H:%M') %><p>
+    <b>Fecha de termino:</b> <%= @actividad.fecha_hora_fin.strftime('%d/%m/%Y %H:%M') %><p>
+    <b>Requiere autorización:</b>
+    <% if @actividad.requiere_autorizacion == 1 %>
+     Si
+    <% else %>
+     No
+    <% end %>
+    <p>
+</div>
 
-<p>
-  <b>Tipo evento:</b>
-  <%= @actividad.tipo_evento_id %>
-</p>
-
-<p>
-  <b>Fecha hora inicio:</b>
-  <%= @actividad.fecha_hora_inicio %>
-</p>
-
-<p>
-  <b>Fecha hora fin:</b>
-  <%= @actividad.fecha_hora_fin %>
-</p>
-
-<p>
-  <b>Tipo actividad:</b>
-  <%= @actividad.tipo_actividad %>
-</p>
-
-<p>
-  <b>Nombre:</b>
-  <%= @actividad.nombre %>
-</p>
-
-<p>
-  <b>Detalle:</b>
-  <%= @actividad.detalle %>
-</p>
-
-<p>
-  <b>Requiere autorizacion:</b>
-  <%= @actividad.requiere_autorizacion %>
-</p>
-
-<p>
-  <b>Limite autorizacion:</b>
-  <%= @actividad.limite_autorizacion %>
-</p>
-
-<p>
-  <b>Inicio notificacion:</b>
-  <%= @actividad.inicio_notificacion %>
-</p>
-
-<p>
-  <b>Fin notificacion:</b>
-  <%= @actividad.fin_notificacion %>
-</p>
-
-<p>
-  <b>Frecuencia dias notificacion:</b>
-  <%= @actividad.frecuencia_dias_notificacion %>
-</p>
-
-<p>
-  <b>Usuario:</b>
-  <%= @actividad.usuario %>
-</p>
-
-
-<%= link_to 'Edit', edit_actividad_path(@actividad) %> |
-<%= link_to 'Back', actividades_path %>
+<div data-role="footer">
+  <%= link_to 'Editar', edit_actividad_path(@actividad), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>
+</div>
