--- a/app/views/actividades/new.html.erb
+++ b/app/views/actividades/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New actividad</h1>
+<div data-role="header">
+  <h1>Crear actividad</h1>
+  <%= link_to 'Regresar', actividades_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', actividades_path %>
