--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -14,6 +14,7 @@
         <li><a href="/alumnos_secciones">Vincular personas</a></li>
         <li><a href="/salida">Salida de alumnos</a></li>
         <li data-role="list-divider">Actividades del colegio</li>
+        <li><a href="<%= actividades_path %>">Registrar</a></li>
         <li><a href="/calendario_actividades/<%= Date.current.strftime("%Y/%m/%d") %>">Calendario</a></li>
     </ul>
   </div><!--/content-primary -->	
